# rust-wasm-example

./: .prototools  README.md  package.json
rust_wasm/: Cargo.toml
rust_wasm/src/: lib.rs  main.rs
ts-deno/: main.ts
ts-node/: main.ts  package.json
vite-bundler/: package.json  vite.config.js
vite-bundler/src/: main.ts
vite-web/: .gitignore  index.html  package.json  vite.config.js
vite-web/src/: main.ts
