[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# "rlib" is not necessary if this package does not have main.rs.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
